[package]
name = "advent23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "advent23_4"
path = "src/advent23_4.rs"

[[bin]]
name = "advent23_1"
path = "src/advent23_1.rs"

[[bin]]
name = "advent23_2"
path = "src/advent23_2.rs"

[[bin]]
name = "advent23_3"
path = "src/advent23_3.rs"



[dependencies]
regex = "1"

